# smarttype

./: .gitignore  LICENSE  MANIFEST.in  README.md  create_icon.py  environment.yml  installer.iss  prompt_de.txt  prompt_en.txt  pyproject.toml  requirements.txt  smarttype.py  start.bat  test_smarttype.py
smarttype/: __init__.py  __main__.py  app.py  cli.py
